objects/NAT_Class_Type_Setting__mdt.object
<CustomObject>
    <fields>
        <fullName>Backgroun_Color__c</fullName>
        <label>Backgroun Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Class_Type__c</fullName>
        <label>Class Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Orientation</fullName>
                    <default>true</default>
                    <label>Orientation</label>
                </value>
                <value>
                    <fullName>CPR</fullName>
                </value>
                <value>
                    <fullName>Theory</fullName>
                </value>
                <value>
                    <fullName>Clinical</fullName>
                </value>
                <value>
                    <fullName>Lab</fullName>
                </value>
                <value>
                    <fullName>Make Up</fullName>
                </value>
                <value>
                    <fullName>Graduation</fullName>
                </value>
                <value>
                    <fullName>Review Day</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Text_Color__c</fullName>
        <label>Text Color</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>NAT Class Type Setting</label>
    <pluralLabel>NAT Class Type Settings</pluralLabel>
</CustomObject>